-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 14
-
Component/s: core-libs
32 bit Java on Windows does not start because of this error:
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (.../src/hotspot/share/classfile/javaClasses.cpp:382), pid=25576, tid=7416
# fatal error: NewStringPlatform missing
JDK-8231355 removed NewStringPlatform alias for JNU_NewStringPlatform.
JNIEXPORT jstring
NewStringPlatform(JNIEnv *env, const char *str)
{
return JNU_NewStringPlatform(env, str);
}
JNIEXPORT jstring JNICALL
JNU_NewStringPlatform(JNIEnv *env, const char *str)
{
NewStringPlatform did not have JNICALL decorator, thus it was exported by its undecorated name in 32 bit Windows. JNU_NewStringPlatform has JNICALL decorator, its name is decorated and therefore it cannot be found.
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (.../src/hotspot/share/classfile/javaClasses.cpp:382), pid=25576, tid=7416
# fatal error: NewStringPlatform missing
JNIEXPORT jstring
NewStringPlatform(JNIEnv *env, const char *str)
{
return JNU_NewStringPlatform(env, str);
}
JNIEXPORT jstring JNICALL
JNU_NewStringPlatform(JNIEnv *env, const char *str)
{
NewStringPlatform did not have JNICALL decorator, thus it was exported by its undecorated name in 32 bit Windows. JNU_NewStringPlatform has JNICALL decorator, its name is decorated and therefore it cannot be found.
- relates to
-
JDK-8232724 Remove indirection with calling JNU_NewStringPlatform
-
- Resolved
-
-
JDK-8231355 Remove unused utility methods in libjava
-
- Resolved
-