8232624: Java cannot start: NewStringPlatform missing

Reviewed-by: dholmes, alanb, redestad